# OptiClimate

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
opticlimate/: __main__.py  pyproject.toml
opticlimate/classify/: __init__.py  classify.py
opticlimate/config/: normalize.py  scenarios.py  schema.py  thresholds.py  validate.py
opticlimate/evaluate/: thresholds.py
opticlimate/fetch/: open_meteo.py
opticlimate/pipeline/: run.py
opticlimate/report/: aggregate_core.py  aggregate_curves.py  aggregate_loss.py  aggregate_stats.py  aggregate_streaks.py  aggregate_visual.py  aggregate_weather.py  build.py  export.py  schemas.py  time_features.py
opticlimate/temporal/: operational_window.py
opticlimate/utils/: io.py  run_id.py
projects/: demo.yml
scripts/: test.cmd  test.ps1  test_extended.cmd
tests/: conftest.py  helpers.py
tests/config/: test_phase1_schema_hardening.py  test_strict_rejects_legacy_inputs.py
tests/core/: test_phase2_operational_window.py  test_phase3_threshold_semantics.py  test_scenarios_expand_standard_3.py
tests/integration/: test_phase5_end_to_end_smoke_offline.py  test_thresholds_per_scenario_distinct_results.py
tests/manual/: test_openmeteo_pipeline_smoke.py
tests/report/: test_export_writes_expected_files.py  test_phase4_bundle_contracts.py  test_streaks_duration_with_duplicate_timestamps.py  test_summary_accounting_identities.py
